# Mailing-Service

./: .env.example  README.md  pyproject.toml
blog/: forms.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_alter_client_commentary_alter_client_name.py  0004_alter_client_owner_alter_message_owner.py  0005_mailing_alter_client_owner_alter_message_owner_and_more.py  0006_remove_mailing_client_mailing_clients_and_more.py  0007_mailingattempt_mailing_and_more.py  0008_rename_mailingattempt_mailinglog.py  0009_mailing_next_date.py  0010_rename_next_date_mailing_next_time.py  0011_alter_mailinglog_status.py  0012_alter_mailinglog_last_success_and_more.py  0013_alter_mailing_options.py  0014_alter_message_owner.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_form.html  client_list.html  index.html  logs_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  new_email_verify.html  new_pass_generate.html  register.html  reset_password.html  set_new_password.html  user_form.html  user_list.html
